--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -3,5 +3,21 @@
 @tailwind utilities;
 
 .bg-image {
-    background-image: url("hero.jpg");
+	background-image: url('hero.jpg');
+}
+::-webkit-scrollbar {
+	width: 14px;
+	height: 14px;
+}
+::-webkit-scrollbar-thumb {
+	background: #7171b0;
+	border-radius: 30px;
+}
+::-webkit-scrollbar-thumb:hover {
+	background: #4074b8;
+}
+::-webkit-scrollbar-track {
+	background: #ffffff;
+	border-radius: 0px;
+	box-shadow: inset 0px 0px 0px 0px #f0f0f0;
 }
